# nebula

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: generate-icon.py  install-shortcut.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  commands.rs  lib.rs  main.rs  policy.rs  vault.rs
src/app/: App.tsx
src/components/agent-builder/: AgentBuilderCanvas.tsx  CodeView.tsx  CreateWorkflowModal.tsx  EvaluateView.tsx  ExecutionVisualizer.tsx  NodePalette.tsx  NodePropertiesPanel.tsx  TemplateCard.tsx  WorkflowCard.tsx  WorkflowListView.tsx  index.ts
src/components/code-viewer/: CodeViewer.tsx
src/components/conversation/: AttachmentBar.tsx  ConversationPane.tsx  MessageBubble.tsx
src/components/evidence/: EvidencePane.tsx
src/components/layout/: MainLayout.tsx  TitleBar.tsx
src/components/plan/: PlanProgressPane.tsx
src/components/projects/: CreateProjectDialog.tsx  ProjectSidebar.tsx
src/hooks/: useAudit.ts  useProject.ts  useWorkflowExecution.ts
src/lib/: tauri-api.ts
src/stores/: agentBuilderStore.ts  agentStore.ts  llmProviderStore.ts  projectStore.ts  workflowStore.ts
src/styles/: globals.css
src/types/: agent.ts  audit.ts  index.ts  integration.ts  policy.ts  project.ts  workstream.ts
tests/workflow-engine/: example-usage.ts
vault/templates/: level-0-change-note.md  level-1-service-note.md  level-2-system-note.md  new-service-proposal.md  prd-note.md
(+48 files in other folders)
